# TodayOnEarth_Backend

./: .env.sample  .gitignore  README.md  binding.gyp  hashlib.py  jest.config.js  knexfile.js  nodemon.json  package-lock.json  package.json  requirements.txt  similarity_score_generator.py  tsconfig.json
.github/: pull_request_template.md
.github/workflows/: codeql-analysis.yml  docs.yml  master_merge.yml
docs/: Readme.md
docs/.vuepress/: config.js
docs/contribution/: people.md  tech.md
docs/guide/: setup.md
docs/models/: interest.md  post.md  provider.md  socials.md  token.md  user.md
docs/mutations/: interest.md  post.md  provider.md  socials.md  user.md
docs/public/: index.html  service-worker.js
docs/queries/: interest.md  native.md  post.md  provider.md  user.md
docs/subscriptions/: post.md  user.md
src/: index.ts  server.js  server.ts  utils.js  utils.test.js
src/PostFetchers/: FacebookFetcher.js  InstagramFetcher.js  PostFetcherBase.js  TelegramFetcher.js  TwitterFetcher.js  facebookFetcher.test.js  instagramFetcher.test.js  telegramFetcher.test.js  twitterFetcher.test.js
src/auth/: auth.ts  passport.ts
src/bot/: bot.ts
src/db/: db.ts  interest_table.ts  keyword_table.ts  login_table.ts  post_table.ts  provider_table.ts  token_table.ts  user_table.ts
src/graphql/: gql.ts  interest_gql.ts  native_gql.ts  post_gql.ts  provider_gql.ts  socials_gql.ts  user_gql.ts
src/model/: post.ts  (+6 more)
src/native/: CMakeLists.txt  index.ts  sample.cpp  trend.cpp  util.cpp
src/native/extra/: similarity_score_generator.py
src/native/includes/: main.h
(+171 files in other folders)
